<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/home_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.coahr.three3.three.customView.TopTitleBar
                android:id="@+id/fragmenthome_topbar"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                />
            <RadioGroup
                android:background="@color/titleBar"
                android:id="@+id/fragmenthome_topRg"
                android:layout_below="@id/fragmenthome_topbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/fragmenthome_topRb1"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:background="@drawable/radiogroup_bottomline"
                    android:textColor="@drawable/radiogroup_textcolor"
                    android:text="@string/RadioButton1"/>
                <RadioButton
                    android:id="@+id/fragmenthome_topRb2"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:background="@drawable/radiogroup_bottomline"
                    android:textColor="@drawable/radiogroup_textcolor"
                    android:text="@string/RadioButton2"/>
                <RadioButton
                    android:id="@+id/fragmenthome_topRb3"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@drawable/radiogroup_bottomline"
                    android:textColor="@drawable/radiogroup_textcolor"
                    android:textSize="15dp"
                    android:text="@string/RadioButton3"/>
                <RadioButton
                    android:id="@+id/fragmenthome_topRb4"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@drawable/radiogroup_bottomline"
                    android:textColor="@drawable/radiogroup_textcolor"
                    android:textSize="15dp"
                    android:text="@string/RadioButton4"/>
            </RadioGroup>
            <LinearLayout
                android:id="@+id/fragmenthome_top_line"
                android:layout_below="@+id/fragmenthome_topRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/titleBar"
                android:orientation="horizontal">
                <View
                    android:id="@+id/home_topline_l"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"

                    />
                <View
                    android:id="@+id/home_topline_lc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"

                    />
                <View
                    android:id="@+id/home_topline_rc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"

                    />
                <View
                    android:id="@+id/home_topline_r"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragmenthome_bottom_Radio"
                android:orientation="horizontal"
                android:layout_below="@+id/fragmenthome_top_line"
                android:background="@color/bottom_radio_bg"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="35dp">
                <TextView
                    android:id="@+id/home_sT"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="45dp"
                    android:text="@string/HomeText1"
                    />
                <TextView
                    android:id="@+id/home_eT"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/HomeText2"
                    />
                <TextView
                    android:id="@+id/home_dis"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginStart="45dp"
                    android:text="@string/HomeText3"

                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
       >
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/fragmenthome_pullDownScrollView"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragmenthome_recycle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
</LinearLayout>